# CS-4A-Project-1-Smart-Home

./: .gitignore  CMakeLists.txt  README.md  build.gradle.kts  main.cpp  settings.gradle.kts
gradle/wrapper/: gradle-wrapper.properties
src/main/java/org/cs4a/project1/: Device.java  DeviceInactiveException.java  InvalidSpeedException.java  InvalidTemperatureException.java  Main.java  Manager.java  Room.java  RoomNotFoundException.java  SpeedInterface.java  TempInterface.java
src/main/java/org/cs4a/project1/exceptions/: DeviceInactiveException.java  DeviceNotFoundException.java  InvalidSpeedException.java  InvalidTemperatureException.java  RoomNotFoundException.java
src/main/java/org/cs4a/project1/interfaces/: SpeedInterface.java  TempInterface.java
src/main/java/org/cs4a/project1/smart_devices/: Device.java  DoorLock.java  Fan.java  MotionSensor.java  SmartLight.java  Thermostat.java
src/main/java/org/cs4a/project1/smartdevices/: Device.java  DoorLock.java  Fan.java  MotionSensor.java  SmartLight.java  Thermostat.java
